# superintelligence

./: .aichignore  .cursorignore  .editorconfig  .flake8  .gitattributes  .gitignore  .gitmodules  .ruff.toml  CHANGELOG.md  LICENSE  Makefile  README.md  aci.py  air_cli.py  air_console.py  air_installer.py  baby.sh  bench_gyrolabe_probe.txt  cleanup_cache.ps1  codebase_structure.md  mypy.ini  pyrightconfig.json  pytest.ini  requirements-bolmo.txt  requirements-cli.txt  requirements-dml.txt  requirements-gyroscopic.txt  requirements.txt  stress.npz
.trae/: .ignore
GyroGem/: Model_Card.md  __init__.py  doc_eval_check.py  download_gyrogem.py  manual_check.py
baby/: chat_simple.py  config.json  tokenizer.py
config/: gyroscopic_llm.yaml
docs/: AIR_Brief.md  AIR_GyroLabe_Specs.md  AIR_Logistics.md  AIR_Moments_Economy_Specs.md  AIR_Moments_Economy_Whitepaper.md  AIR_Moments_Genealogies_Specs.md  AIR_Moments_Wallet.md  Alignment_Convergence_Brief.md  Byte_Boundaries_Reference.md  Codebase.md  CommonGovernanceModel.md  Foundations.md  GGG_ASI_AR_Holography.md  GGG_ASI_AR_Implications.md  GGG_ASI_AR_Potential.md  GGG_ASI_AR_SDK_Holographic_Web.md  GGG_ASI_AR_SDK_Network.md  GGG_ASI_AR_Specs.md  GGG_ASI_AR_Substrate_Specs.md  GyroGem_Specs.md  GyroGraph_Specs.md  GyroLabe_Specs.md  GyroLog.md  GyroSI_Specs.md  GyroSI_Substrate_Specs.md  Gyrolabe_Brief.md  Gyroscopic_ASI_AlignmentRouter copy.md  Gyroscopic_ASI_AlignmentRouter.md  Gyroscopic_ASI_Foundations.md  Gyroscopic_ASI_Holography.md  Gyroscopic_ASI_Implications.md  Gyroscopic_ASI_Router.md  Gyroscopic_ASI_Runtime_Specs.md  Gyroscopic_ASI_SDK_Holographic_Web.md  Gyroscopic_ASI_SDK_Network.md  Gyroscopic_ASI_SDK_Quantum_Computing.md  Gyroscopic_ASI_SDK_Strategic_Significance_Brief.md  (+9 more)
research/: pyproject.toml
research/baby/: chat.py
research/baby/constants/: gyrolog.py  test_atlas_builder.py
research/baby/kernel/: gyro_core.py
research/baby/responses_api/inference/: stub.py
research/experiments/: gyro_physics.py  gyro_topology_analysis.py  gyro_validation.py
research/toys/evals/: abcd_grader.py  basic_eval.py  chat_completions_sampler.py  gpqa_eval.py  responses_sampler.py
research/toys/experiments/: check_gene_mac_s_index.py  kernel.py
research/toys/legacy/: gyro_core_legacy.py
research/toys/training/: conversation_boostrap.txt  test_continuation.py
(+848 files in other folders)
