[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gyrosi-baby-lm"
version = "0.9.5"
description = "GyroSI Baby LM - Gyroscopic Superintelligence Language Model"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Basil Korompilias"},
]
keywords = ["language-model", "superintelligence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
]

test = [
    "pytest>=7.4.0",
]

[project.scripts]
babylm = "babylm:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["baby*", "memories*", "toys*"]
exclude = ["venv*", "__pycache__*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["toys/health"]
python_files = ["*_tests.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | \.mypy_cache
  | \.pytest_cache
  | memories
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
skip = ["venv", ".venv", "__pycache__", "memories"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
exclude = [
    "venv",
    ".venv",
    "__pycache__",
    "memories",
]

[[tool.mypy.overrides]]
module = "cryptography.*"
ignore_missing_imports = true